--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,54 @@
 <app-header></app-header>
+<section class="promo-page">
+  <div class="container">
+    <div class="promo">
+      <div class="promo_info">
+        <h1 class="promo_title">Б л о г</h1>
+        <p class="promo_desc">Наші найкращі матеріали у вашій пошті</p>
+        <button class="company-button company-button__accent">Підписатися</button>
+        <button class="company-button">Задати питання</button>
+      </div>
+      <div class="promo_img">
+        <img src="https://7-price.com/img/blogs/blog_img.png">
+      </div>
+    </div>
+  </div>
+</section>
 
+<section class="blog-page">
+  <div class="container">
+    <ul class="list">
+      <li class="list_item">
+        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
+        <div class="list_desc">
+          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
+        </div>
+      </li>
+      <li class="list_item">
+        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
+        <div class="list_desc">
+          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
+        </div>
+      </li>
+      <li class="list_item">
+        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
+        <div class="list_desc">
+          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
+        </div>
+      </li>
+      <li class="list_item">
+        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
+        <div class="list_desc">
+          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
+        </div>
+      </li>
+      <li class="list_item">
+        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
+        <div class="list_desc">
+          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <button class="blog-btn company-button company-button__grey">Більше статей</button>
+</section>
