--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,10 +1,13 @@
+@import "../../../colors";
 .header {
-  background: #1a4f86;
+  background: $color-dark-blue;
   box-shadow: 0 0 8px rgba(0,0,0,.6);
-  color: white;
+  color: $color-font-white;
   font-size: 18px;
   text-transform: capitalize;
-  padding: 5px 0;
+  position: fixed;
+  width: 100%;
+  height: 40px;
   &_content {
     display: flex;
     justify-content: space-between;
@@ -25,12 +28,12 @@
   &_btn {
     background: transparent;
     border: none;
-    color: white;
+    color: $color-font-white;
     font-weight: bold;
     font-size: inherit;
     margin-right: 15px;
     &:hover {
-      color: #ffc107;
+      color: $color-accent;
     }
   }
 }
@@ -40,7 +43,7 @@
   font-size: 25px;
   display: none;
   border: none;
-  color: white;
+  color: $color-font-white;
   background: transparent;
 }
 
@@ -51,7 +54,7 @@
 .dropdown-item {
   font-weight: bold;
   font-size: inherit;
-  color: #1a4f86;
+  color: $color-dark-blue;
   margin: 10px 0;
 }
 
@@ -59,14 +62,14 @@
   margin: 20px 0 20px 70px;
   font-size: 18px;
   font-weight: bold;
-  color: #388acb;
+  color: $color-light-blue;
   &_item {
     margin: 15px 0 15px 30px;
     &:hover {
-      color: #ffc107;
+      color: $color-accent;
     }
     &__header {
-      color: #33475b;
+      color: $color-dark-grey;
       cursor: none;
       margin: 15px 0 15px 0;
     }
