--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,41 +14,4 @@
     </div>
   </div>
 </section>
-
-<section class="blog-page">
-  <div class="container">
-    <ul class="list">
-      <li class="list_item">
-        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
-        <div class="list_desc">
-          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
-        </div>
-      </li>
-      <li class="list_item">
-        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
-        <div class="list_desc">
-          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
-        </div>
-      </li>
-      <li class="list_item">
-        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
-        <div class="list_desc">
-          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
-        </div>
-      </li>
-      <li class="list_item">
-        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
-        <div class="list_desc">
-          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
-        </div>
-      </li>
-      <li class="list_item">
-        <img class="list_img" src="https://panel.7-price.com/Content/image/blog/what-do-you-need-to-know-before-pricing-you-product.png">
-        <div class="list_desc">
-          <a>Що вам потрібно знати, перш ніж визначити ціну вашого продукту?</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <button class="blog-btn company-button company-button__grey">Більше статей</button>
-</section>
+<router-outlet></router-outlet>
