--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
   <div class="container">
     <div class="promo">
       <div class="promo_info">
-        <h1 class="promo_title">Б л о г</h1>
-        <p class="promo_desc">Наші найкращі матеріали у вашій пошті</p>
-        <button class="company-button company-button__accent">Підписатися</button>
-        <button class="company-button">Задати питання</button>
+        <h1 class="promo_title">{{'BLOG.TITLE' | translate}}</h1>
+        <p class="promo_desc">{{'BLOG.DESC' | translate}}</p>
+        <button class="company-button company-button__accent">{{'BUTTON.SUBSCRIBE' | translate}}</button>
+        <button class="company-button">{{'BUTTON.ASK' | translate}}</button>
       </div>
       <div class="promo_img">
         <img src="https://7-price.com/img/blogs/blog_img.png">
