--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -9,5 +9,5 @@
       </li>
     </ul>
   </div>
-  <button class="blog-btn company-button company-button__grey" *ngIf="loadDataBtn" (click)="loadData()">Більше статей</button>
+  <button class="blog-btn company-button company-button__grey" *ngIf="loadDataBtn" (click)="loadData()">{{'BUTTON.LOADPOST' | translate}}</button>
 </section>
