--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,10 +1,11 @@
+
 <section class="blog-page">
   <div class="container" >
     <ul class="list">
-      <li class="list_item" *ngFor="let item of posts" routerLink="/blog-page">
+      <li class="list_item" *ngFor="let item of posts" [routerLink]="['/blog', item.Slug]">
         <img class="list_img" src="{{item.MainImage}}">
         <div class="list_desc">
-          <a routerLink="/{{item.slug}}" href="{{item.slug}}">{{item.Title}}</a>
+          <a >{{item.Title}}</a>
         </div>
       </li>
     </ul>
